@@ -6,7 +6,7 @@
 = show_flash_if_any
 %table{ :width => "100%", :height => "100%", :cellpadding => 0, :cellspacing => 0, :class => :two_column_layout }
   %tr
-    %td{ :class => :main, :valign => :top }
+    %td{ :class => :main, :id => :main, :valign => :top }
       = yield
-    %td{ :class => :sidebar, :valign => :top }
+    %td{ :class => :sidebar, :id => :sidebar, :valign => :top }
       = yield(:sidebar) || render(:partial => "sidebar_" << controller.action_name) rescue nil
