@@ -1,3 +1,3 @@
 page[dom_id(@lead)].visual_effect "BlindUp", :duration => 0.25
+page[:sidebar].replace_html :partial => "sidebar_index"
 page[:filters].visual_effect :shake, :duration => 0.4, :distance => 3
-page[:filters].replace_html :partial => "sidebar_index"
