@@ -1,2 +1,4 @@
 page[dom_id(@task, :tools)].hide
-page[dom_id(@task)].visual_effect :fade, :duration => 1.5 # afterFinish: update sidebar
+page[dom_id(@task)].visual_effect :fade, :duration => 0.5
+page[:sidebar].replace_html :partial => "sidebar_index"
+page[:filters].visual_effect :shake, :duration => 0.4, :distance => 3
