@@ -1,6 +1,7 @@
 Sun, Feb 1, 2008
 ---------------------------------------------------------------------
 - Refactored tasks controller to offload most of sidebar and filter processing to task model.
+- Impletented tasks/complete for pending tasks.
 
 Sat, Jan 31, 2008
 ---------------------------------------------------------------------
